examples/errors/invalid-names.rcp
channels: chan
enum a {foo, bar}
enum channels {bar}
property-variables: x : bool

agent Agent
    local: counter : int, agent: bool, true: int
    init: true

    repeat: (
                label: {counter == 0} chan! true () [counter := 1]
            )

system = Agent(one, true) || Agent(two, true) || Agent(three, true)
